// TODO: remove
syntax = "proto3";

package llm;

service LLM {
  // Simple generation call
  rpc GenerateText(GenerateRequest) returns (GenerateResponse);

  // Streaming generation
  rpc StreamGenerateText(GenerateRequest) returns (stream GenerateResponse);

  // Functional call example
  rpc FunctionalCall(FuncCallRequest) returns (FuncCallResponse);
}

message GenerateRequest {
  string prompt = 1;
  int32 max_tokens = 2;
}


message FuncCallRequest {
  string function_name = 1;
  string arguments_json = 2;
}

message FuncCallResponse {
  string result_json = 1;
}

message GenerateResponse {
  string token = 1;
}
